<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivityAdmin">

    <EditText
        android:id="@+id/etItemName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_name"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"/>

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etItemName"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:hint="@string/input_price"
        android:inputType="number"/>

    <EditText
        android:id="@+id/etDesc"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPrice"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:hint="@string/description"
        android:inputType="text"/>


    <Button
        android:id="@+id/btnChooseImage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@+id/etItemName"
        android:text="@string/choose_image" />

    <ImageView
        android:id="@+id/ivAdminItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnAddItem"
        android:layout_below="@id/etDesc"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"/>


    <Button
        android:id="@+id/btnAddItem"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-110dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_toEndOf="@+id/etItemName"
        android:text="@string/add_item" />

    <TextView
        android:id="@+id/tvShowItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnAddItem"
        android:layout_alignTop="@+id/btnAddItem"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@+id/btnAddItem"
        android:gravity="center"
        android:text="@string/show_items"
        android:textSize="16sp" />


</RelativeLayout>